# twitch-player

./: .gitignore  LICENSE  README.md  protocol.reg
app/: Cargo.toml  config.toml.example
app/src/: client.rs  errors.rs  gui.rs  main.rs  options.rs  player.rs  process.rs  types.rs  windows.rs
app/src/gui/: keybinds.rs  layout.rs  mod.rs
app/src/native/: mod.rs  windows.rs  x11.rs
chrome-ext/: manifest.json  run.js
old-app/: config.toml.example
old-app/src/: errors.rs  main.rs  options.rs  player.rs  process.rs
old-app/src/gui/: utils.rs
old-app/src/native/: windows.rs
player/: .gitignore  player.pro
player/forms/: about_dialog.ui  filters_tool.ui  main_window.ui  options_dialog.ui  quality_picker_dialog.ui  stream_card.ui  stream_details.ui  stream_picker.ui  video_controls.ui  vlc_log_viewer.ui
player/include/: constants.hpp  foreign_widget.hpp  libvlc.hpp  main_window.hpp  stream_widget.hpp  video_widget.hpp  vlc_event_watcher.hpp  vlc_logger.hpp  win.hpp
player/include/api/: oauth.hpp  pubsub.hpp  twitch.hpp  twitchd.hpp
player/resources/: player.qrc
player/scripts/: build.bat  qmake.bat
player/src/: foreign_widget.cpp  libvlc.cpp  main.cpp  main_window.cpp  main_window_shortcuts.cpp  stream_widget.cpp  video_widget.cpp  vlc_event_watcher.cpp  vlc_logger.cpp
scripts/: protocol.reg
scripts/win32/: bundle-dist.bat
src/: player.pyw
twitchd/: Cargo.toml
twitchd/scripts/win32/: release.bat
twitchd/src/: main.rs  options.rs  types.rs
twitchd/src/prelude/: http.rs  mod.rs  runtime.rs  stream_ext.rs  timer.rs
twitchd/src/server/: mod.rs  service.rs
twitchd/src/server/state/: index_cache.rs  mod.rs  player_pool.rs  stream_player.rs
twitchd/src/state/: index_cache.rs  mod.rs
twitchd/src/twitch/: api.rs  m3u8.rs  mod.rs  mpeg_ts.rs  types.rs  utils.rs
twitchd/test_samples/m3u8/: faulty_playlist_01_august_2019.m3u8  faulty_playlist_11_october_2019.m3u8  faulty_playlist_22_may_2019.m3u8  index_with_restricted_playlist.m3u8  index_without_program_id.m3u8  playlist_with_map.m3u8  playlist_with_prefetch_segments.m3u8  playlist_with_program_date_time.m3u8  playlist_with_stitched_ads.m3u8  simple_index.m3u8  simple_playlist.m3u8
twitchd/test_samples/mpeg_ts/: encoded_160p.ts  encoded_480p.ts  encoded_720p60.ts  source_1080p60.ts  source_faulty_21_feb_2020.ts  source_faulty_22_may_2019.ts
(+95 files in other folders)
