[package]
name = "twitchd"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"

http = "0.1"
mime = "0.3"
hyper = "0.12"
hyper-tls = "0.3"
url = "1.7"

tokio = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

num_cpus = "1.8"

nom = "4.0"

bytes = "0.4"

structopt = "0.2"

[profile.release]
lto = true
panic = "abort"
