[package]
name = "twitchd"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"

http = "0.2"
mime = "0.3"
hyper = { version = "0.14", features = ["stream"] }
hyper-tls = "0.4"
url = "2.1"

tokio = { version = "0.2", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nom = "4.0"

structopt = "0.2"

thiserror = "1.0"

pin-project = "0.4"

[profile.release]
lto = true
panic = "abort"
